fix urls in project

--- a/projects/art1.html
+++ b/projects/art1.html
@@ -39,7 +39,7 @@
 							<div class="ht-cata">Marcel Duchamp</div>
 							<h2>Bicycle Wheel</h2>
 							<p>One of Duchamp's first pieces, this readymade sculpture challenged the definitions of art at the time and helped kick off the Dada movement.</p>
-							<a href="gallery.html" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
+							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
