--- a/projects/art8.html
+++ b/projects/art8.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -39,7 +40,7 @@
 							<div class="ht-cata">Artist Name</div>
 							<h2>Name of Painting</h2>
 							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
-							<a href="gallery.html" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
+							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
