--- a/projects/gallery.html
+++ b/projects/gallery.html
@@ -89,7 +89,7 @@
 		<div class="container">
 		<div class="row gallery-gird">
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art1.html">
+				<a class="gallery-item" href="art1">
 					<img src="img/1.jpg" alt="">
 					<div class="gi-text">
 						<h4>Bicycle Wheel</h4>
@@ -98,7 +98,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art2.html">
+				<a class="gallery-item" href="art2">
 					<img src="img/2.jpg" alt="">
 					<div class="gi-text">
 						<h4>Campbell's Soup Cans</h4>
@@ -107,7 +107,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art3.html">
+				<a class="gallery-item" href="art3">
 					<img src="img/3.jpg" alt="">
 					<div class="gi-text">
 						<h4>Woman With a Hat</h4>
@@ -116,7 +116,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art4.html">
+				<a class="gallery-item" href="art4">
 					<img src="img/4.jpg" alt="">
 					<div class="gi-text">
 						<h4>Impression: Sunrise</h4>
@@ -125,7 +125,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art5.html">
+				<a class="gallery-item" href="art5">
 					<img src="img/5.jpg" alt="">
 					<div class="gi-text">
 						<h4>The Engima of an Autumn Afternoon</h4>
@@ -134,7 +134,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art6.html">
+				<a class="gallery-item" href="art6">
 					<img src="img/6.jpg" alt="">
 					<div class="gi-text">
 						<h4>Love is in the Bin</h4>
@@ -143,7 +143,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art7.html">
+				<a class="gallery-item" href="art7">
 					<img src="img/7.jpg" alt="">
 					<div class="gi-text">
 						<h4>Fighting Forms</h4>
@@ -152,7 +152,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art8.html">
+				<a class="gallery-item" href="art8">
 					<img src="img/8.jpg" alt="">
 					<div class="gi-text">
 						<h4>Black Square</h4>
@@ -161,7 +161,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art9.html">
+				<a class="gallery-item" href="art9">
 					<img src="img/9.jpg" alt="">
 					<div class="gi-text">
 						<h4>Drawing Hands</h4>
@@ -170,7 +170,7 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="art10.html">
+				<a class="gallery-item" href="art10">
 					<img src="img/10.jpg" alt="">
 					<div class="gi-text">
 						<h4>The Stonebreakers</h4>
