added info art1

--- a/projects/art1.html
+++ b/projects/art1.html
@@ -56,9 +56,14 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>This was Marcel Duchamp's first readymade sculpture. He created this before he even coined the term "readymade." This piece marks the beginning of a long line of
+						readymade pieces, which would become Duchamp's signature style. This piece is unique not just in that it's Duchamp's first readymade sculpture, but in that it 
+						incorporates motion. Like many of his works, <em>Bicycle Wheel</em> was an early example of Conceptual Art. In other words, the concept of the artwork matters
+						more than the physical manifestation of it. This was groundbreaking at the time and to this day <em>Bicycle Wheel</em> remains a piece of art that stands out, even among others of its class.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>Duchamp, Marcel. “Marcel Duchamp. Bicycle Wheel. New York, 1951 (Third Version, after Lost Original of 1913): MoMA.” The Museum of Modern Art, <a href="www.moma.org/collection/works/81631">www.moma.org/collection/works/81631.</a></p>
 				</div>		
 			</div>			
 		</div>
