--- a/projects/art2.html
+++ b/projects/art2.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Andy Warhol</div>
+							<h2>Campbell's Soup Cans</h2>
+							<p>One of Warhol's first works, this iconic collection of screen printed soup cans invited in a new way to look at everyday objects</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/2.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of MoMA" data-fresco-options="ui: 'inside'" href="img/2.jpg">
 						<img class="art-image" src="img/2.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,14 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>Warhol had been experimenting with different screen printing techniques prior to creating this piece. He used these techniques to produce
+						a uniform series of Campbell's soup cans, each nearly identical. While others were beginning to create Pop Art at the time, this is widely regarded
+						as one of the pieces that jump started the movement. Warhol followed in the footsteps of Duchamp in that he put less emphasis on the techniques used
+						to create the art and the skill of the artist than the idea behind the art. He was a pioneer of screenprinting techniques in the pop art scene, and this piece
+						stands out in particular as one of the first to focus on an everyday item in modern life.
+					<br>
+					<h4>Sources</h4>
+					<p>Sal Khan and Dr. Steven Zucker, "Why is this art? Andy Warhol, Campbell’s Soup Cans," in Smarthistory, December 8, 2015, accessed May 8, 2020, https://smarthistory.org/why-is-this-art-andy-warhol-campbells-soup-cans/.</p>
 				</div>		
 			</div>			
 		</div>
