--- a/projects/art3.html
+++ b/projects/art3.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Henri Matisse</div>
+							<h2>Woman with a Hat</h2>
+							<p>This painting marked a departure from Matisse's earlier style and kicked off the Fauvism movement</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/3.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of San Francisco MoMA" data-fresco-options="ui: 'inside'" href="img/3.jpg">
 						<img class="art-image" src="img/3.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,14 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>This was not Matisse's first painting to use the vivid, unnatural colors characteristic of Fauvism, but it was his first real 
+						departure from pointillism, and the piece that is considered to have truly began Fauvism movement. Matisse drew influence from the
+						Impressionist art movement that was also going on around that time and some similarities can be drawn with his loose style of brushwork.
+						What truly made this piece stand out however, was a combination of all of those factors. It was a shift in Matisse's use of color, his brushwork,
+						and his use of perspective, all at once.</p>
+					<br>
+					<h4>Sources</h4>
+					<p>“Woman with a Hat.” Woman with a Hat (Femme Au Chapeau), 1905 by Henri Matisse, www.henrimatisse.org/woman-with-a-hat.jsp.</p>
 				</div>		
 			</div>			
 		</div>
