--- a/projects/gallery.html
+++ b/projects/gallery.html
@@ -119,7 +119,7 @@
 				<a class="gallery-item" href="art4">
 					<img src="img/4.jpg" alt="">
 					<div class="gi-text">
-						<h4>Impression: Sunrise</h4>
+						<h4>Impression, Sunrise</h4>
 						<p>Claude Monet</p>
 					</div>
 				</a>
