--- a/projects/art4.html
+++ b/projects/art4.html
@@ -36,9 +36,9 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Claude Monet</div>
+							<h2>Impression, Sunrise</h2>
+							<p>The namesake piece for the Impressionist art movement, this painting was the first of several in Monet's characteristic style</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
@@ -56,9 +56,15 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						This was Monet's first piece to focus almost entirely on light and color. It was painted as part of a series of six paintings featuring the Port of Le Havre. 
+						This particular painting stood out due to its loose brushwork and muted colors, which were unlike Monet's prior work. Perhaps most notably, it was designed to just
+						give the feeling of looking at the Port of Le Havre, rather than showing it in detail. Many other paintings followed with this in mind, but <em>Impression, Sunrise</em>
+						was the one piece that broke away from the ideas of the time and ended up sparking a movement.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>Richman-Abdou, Kelly. “How This One Painting Sparked the Impressionist Movement.” My Modern Met, 1 July 2019, mymodernmet.com/claude-monet-impression-sunrise/.</p>
 				</div>		
 			</div>			
 		</div>
