--- a/projects/art4.html
+++ b/projects/art4.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/4.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of Wiki Commons" data-fresco-options="ui: 'inside'" href="img/4.jpg">
 						<img class="art-image" src="img/4.jpg" alt="name of painting">
 					</a>
 				</div>
