--- a/projects/art5.html
+++ b/projects/art5.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Giorgio De Chirico</div>
+							<h2>The Enigma of an Autumn Afternoon</h2>
+							<p>This was the first Metaphysical art piece, showing the beginnings of a style that Chirico would later build upon.</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/5.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of /u/Notfunnyanymore on Reddit" data-fresco-options="ui: 'inside'" href="img/5.jpg">
 						<img class="art-image" src="img/5.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,14 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						This is the first painting in Chirico's <em>Metaphysical Town Square</em> series. This was the first use of his now famous style and imagery, consisting of old towns lit
+						from long angles with sharp contrasts, evoking a disconcerting, almost dreamlike feeling. The buildings in the piece are simplified, drawing more attention to the lighting of 
+						the statue and the couple in the foreground. This piece stands out as the first to depart from Chirico's previous art style and solidify the characteristics of Metaphysical Art.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>“Giorgio De Chirico Paintings, Bio, Ideas.” The Art Story, www.theartstory.org/artist/de-chirico-giorgio/.</p>
 				</div>		
 			</div>			
 		</div>
