added info art6

--- a/projects/art6.html
+++ b/projects/art6.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Banksy</div>
+							<h2>Love is in the Bin (Girl with Balloon)</h2>
+							<p>The first live performance art to be sold at auction, a unique work of art intervention</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/6.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of Sotheby's" data-fresco-options="ui: 'inside'" href="img/6.jpg">
 						<img class="art-image" src="img/6.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,17 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						This originated as the 2006 painting <em>Girl with Balloon</em>, which Banksy gifted to a friend. This was rare in itself, as it was a unique canvas work, rather than a print.
+						When the painting was sold at auction in 2018, Banksy (or one of his associates) activated a remote self-destruct sequence, shredding roughly half of the painting. Banksy then renamed
+						the piece <em>Love is in the Bin</em>This was not Banksy's first destructive work of art. Though one could argue that graffiti is a form of vandalism, Bansky had previously stenciled over 
+						canvases in his <em>Corrupted Oils</em> series. This piece was different, in that it was both a live piece of performance art and a transformation of one artwork into another. 
+						This fits with Banksy's style, but stands out as one of the most memorable artworks of our time due to its unique concept and execution.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>Waga, Nel-Olivia. “Inside Banksy's 'Love Is In The Bin' Exhibition at the Museum Frieder Burda in Germany.” Forbes, Forbes Magazine, 14 Feb. 2019, www.forbes.com/sites/neloliviawaga/2019/02/14/banksys-love-is-in-the-bin-at-museum-frieder-burda-in-baden-baden-germany/#3ff8f7af654d.</p>
+					<p>Sotheby. “Latest Banksy Artwork 'Love Is in the Bin' Created Live at Auction.” Sothebys.com, Sotheby's, 15 Oct. 2018, www.sothebys.com/en/articles/latest-banksy-artwork-love-is-in-the-bin-created-live-at-auction.</p>
 				</div>		
 			</div>			
 		</div>
