--- a/projects/art7.html
+++ b/projects/art7.html
@@ -37,9 +37,9 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Franz Marc</div>
+							<h2>Fighting Forms</h2>
+							<p>A change in Marc's style created one of the earlier abstract pieces during the Expressionist movement</p>
 							<a href="gallery.html" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
@@ -57,9 +57,16 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						This painting denotes a break from Marc's traditional style of colorful animals against pastoral landscapes, instead featuring brightly colored shapes, full of motion
+						and feeling. Unlike his prior work, there are no clearly visible animals, just the two swirling shapes at war with each other. This was Franz Marc's final work before he 
+						enlisted during World War I, later dying in combat. This is one of the earliest works of abstract art, created during the Expressionist movement almost 30 years before Jackson Pollock, Mark Rothko,
+						and others pioneered the Abstract Expressionist movement. It stands on its own as a departure from the artist's previous work and an early example of the idealogies that would take
+						over the art world in the coming decades.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>“Fighting Forms.” Fighting Forms by Franz Marc, www.franzmarc.org/Fighting-Forms.jsp.</p>
 				</div>		
 			</div>			
 		</div>
