--- a/projects/art7.html
+++ b/projects/art7.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/7.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of FranzMarc.org" data-fresco-options="ui: 'inside'" href="img/7.jpg">
 						<img class="art-image" src="img/7.jpg" alt="name of painting">
 					</a>
 				</div>
