update page titles

--- a/projects/art8.html
+++ b/projects/art8.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Cassi | Photo Studio HTML Template</title>
+	<title>art gallery</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cassi Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
@@ -37,15 +37,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">Kazimir Malevich</div>
+							<h2>Black Square</h2>
+							<p>One of the first examples of minimalism in art, and an early example of modern art</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/8.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of Wiki Commons" data-fresco-options="ui: 'inside'" href="img/8.jpg">
 						<img class="art-image" src="img/8.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -57,9 +57,16 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						This painting denotes a break from Marc's traditional style of colorful animals against pastoral landscapes, instead featuring brightly colored shapes, full of motion
+						and feeling. Unlike his prior work, there are no clearly visible animals, just the two swirling shapes at war with each other. This was Franz Marc's final work before he 
+						enlisted during World War I, later dying in combat. This is one of the earliest works of abstract art, created during the Expressionist movement almost 30 years before Jackson Pollock, Mark Rothko,
+						and others pioneered the Abstract Expressionist movement. It stands on its own as a departure from the artist's previous work and an early example of the idealogies that would take
+						over the art world in the coming decades.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>“Black Square.” Black Square by Kazimir Malevich, www.kazimirmalevich.org/black-square/.</p>
 				</div>		
 			</div>			
 		</div>
