--- a/projects/art9.html
+++ b/projects/art9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Cassi | Photo Studio HTML Template</title>
+	<title>art gallery</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cassi Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
