--- a/projects/art8.html
+++ b/projects/art8.html
@@ -39,7 +39,7 @@
 						<div class="art-text">
 							<div class="ht-cata">Kazimir Malevich</div>
 							<h2>Black Square</h2>
-							<p>One of the first examples of minimalism in art, and an early example of modern art</p>
+							<p>One of the first examples of minimalism in art and an early example of modern art</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
@@ -58,11 +58,10 @@
 			<div class="row">
 				<div class="col-xl-10 m-auto">
 					<p>
-						This painting denotes a break from Marc's traditional style of colorful animals against pastoral landscapes, instead featuring brightly colored shapes, full of motion
-						and feeling. Unlike his prior work, there are no clearly visible animals, just the two swirling shapes at war with each other. This was Franz Marc's final work before he 
-						enlisted during World War I, later dying in combat. This is one of the earliest works of abstract art, created during the Expressionist movement almost 30 years before Jackson Pollock, Mark Rothko,
-						and others pioneered the Abstract Expressionist movement. It stands on its own as a departure from the artist's previous work and an early example of the idealogies that would take
-						over the art world in the coming decades.
+						With <em>Black Square</em>, Malevich departed from Cubism and created the first Suprematist work. This painting pushed new ideas on the meaning of art and was intended to be
+						viewed entirely subjectively. The idea was to represent pure feeling on canvas, in the form of geometric shapes on a white background. The square symbolizes a feeling coming out of
+						nothingness. This was a novel concept at the time, and was widely regarded as one of the earliest examples of modern art and minimalism in painting. It proposed unique ideas for its time
+						and provided a foundation for Modern Art.
 					</p>
 					<br>
 					<h4>Sources</h4>
