--- a/projects/art9.html
+++ b/projects/art9.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">M.C. Escher</div>
+							<h2>Drawing Hands</h2>
+							<p>One of Escher's most well known works, this piece explores three dimensional space and logical paradox</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/9.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of The M.C. Escher Company" data-fresco-options="ui: 'inside'" href="img/9.jpg">
 						<img class="art-image" src="img/9.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,15 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						M.C. Escher is well known for his use of paradox in art and <em>Drawing Hands</em> is one of the best examples of that. This particular piece was the first three dimensional lithograph 
+						that incorporated the idea of paradox, and was uniquely in Escher's style. It followed the almost photorealistic works prior, highlighting Escher's mastery of lighting, shading, and dimension.
+						He later went on to create more artworks that built upon this idea of a paradox in space.  <em>Drawing Hands</em> marks the true beginning of Escher's foray into paradox in three dimensions,
+						solidifying him as a graphic artist that transcended the limits of his two dimensional medium.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>Brooks, Kylie. “M.C. Escher's ‘Drawing Hands.’” BYU Museum of Art, BYU Museum of Art, 15 Feb. 2018, moa.byu.edu/m-c-eschers-drawing-hands/.</p>
 				</div>		
 			</div>			
 		</div>
