--- a/projects/art10.html
+++ b/projects/art10.html
@@ -36,15 +36,15 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">Artist Name</div>
-							<h2>Name of Painting</h2>
-							<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+							<div class="ht-cata">The Stonebreakers</div>
+							<h2>Gustave Courbet</h2>
+							<p>One of the earliest works of the Realism movement, this artwork eschewed the ideals of romanticism</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-6">
-					<a class="img-fluid fresco" data-fresco-caption="IMAGE SOURCE" data-fresco-options="ui: 'inside'" href="img/10.jpg">
+					<a class="img-fluid fresco" data-fresco-caption="Image courtesy of Wiki Commons" data-fresco-options="ui: 'inside'" href="img/10.jpg">
 						<img class="art-image" src="img/10.jpg" alt="name of painting">
 					</a>
 				</div>
@@ -56,9 +56,16 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-10 m-auto">
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
-					<p>Qui consectetur occaecat nostrud incididunt ullamco sint magna. Deserunt tempor occaecat est non anim ut sit reprehenderit. Dolore aliquip est ut ad eu eu excepteur exercitation ipsum.</p>
+					<p>
+						Through a simple depiction of a memory, Courbet managed to begin an entire art movement. He painted the scene as it was, including the laborers' torn clothes and 
+						the muddy backdrop of the hill behind. He put an equal amount of detail into the rocks and the dirt as he did the people. The colors are natural, depicting things
+						as closely as possible to how they were. This was a conscious rejection of the highly polished art style of his time. His refusal to follow the trends at the time
+						and his insistance on painting things as they truly were kick started the Realism movement.
+					</p>
+					<br>
+					<h4>Sources</h4>
+					<p>“Courbet, The Stonebreakers (Article).” Khan Academy, Khan Academy, www.khanacademy.org/humanities/ap-art-history/later-europe-and-americas/modernity-ap/a/courbet-the-stonebreakers.</p>
+					<p>“The Stone Breakers, 1849 by Gustave Courbet.” The Stone Breakers, 1849, www.gustave-courbet.com/the-stonebreakers.jsp.</p>
 				</div>		
 			</div>			
 		</div>
