--- a/projects/gallery.html
+++ b/projects/gallery.html
@@ -59,9 +59,8 @@
 						Whichever the case may be, I've collected a few pieces of art below that stand out in some way. 
 					</p>
 					<p>My motivation for this collection was to showcase those that thought differently. I have always appreciated people who
-						 try to do things differently. That appreciation extends to my view of art. Even if I don't particularly like the piece
-						itself, I respect the artist for trying something new. For this collection, I 
-						will be focusing on paintings, drawings, and sculpture, as they are most easily represented in photographs.
+						 go against the grain and that appreciation extends to my view of art. Even if it doesn't work out, I respect the artist for trying 
+						 something new. For this collection, I will be focusing on paintings, drawings, and sculpture, as they are most easily represented in photographs.
 					</p>
 				</div>
 			</div>
