--- a/projects/art4.html
+++ b/projects/art4.html
@@ -3,7 +3,7 @@
 <head>
 	<title>art gallery</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Cassi Photo Studio HTML Template">
+	<meta name="description" content="Art 112 Final Project">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
