fixed artist name/title swap

--- a/projects/art10.html
+++ b/projects/art10.html
@@ -36,8 +36,8 @@
 				<div class="col-xl-6">
 					<div class="art-item">
 						<div class="art-text">
-							<div class="ht-cata">The Stonebreakers</div>
-							<h2>Gustave Courbet</h2>
+							<div class="ht-cata">Gustave Courbet</div>
+							<h2>The Stonebreakers</h2>
 							<p>One of the earliest works of the Realism movement, this artwork eschewed the ideals of romanticism</p>
 							<a href="gallery" class="ht-btn"><i class="arrow_left"></i> Back to Overview</i></a>
 						</div>
