--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3 class="primary-text">About Me</h3>
       <p>
         My name is Tristen Angell. I'm a developer, auto enthusiast, and entrepreneur. I founded Sans Halo LLC in order to develop professional
-        websites for local businesses and organizations. I'm currently studying computer science at Jackson College.
+        websites for local businesses and organizations.
     </div>
   </div>
 
@@ -44,7 +44,7 @@
   </div>
 
   <div class="container-fluid padded footer text-center">
-    <p>Copyright &#169; 2018 Tristen Angell. Profile photo by Sophie Albee-Scott. Background images courtesy of <a href="https://unsplash.com">Unsplash.<br></a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+    <p>Copyright &#169; 2020 Tristen Angell. Profile photo by Sophie Albee-Scott. Background images courtesy of <a href="https://unsplash.com">Unsplash.<br></a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
   </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
