--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <hr/>
     <h4>SKILLS</h4>
     <ul>
-      <li>Comfortable with C++, C#, JS, Java, Lua, Python, and PHP</li>
+      <li>Comfortable with C++, C#, JS, Java, Lua, Python, and PHP, as well as modern web frameworks such as Laravel, Django, and Angular</li>
       <li>Competent with Windows, macOS, and Linux</li>
       <li>Proficient with modern web design, including responsive design principles and mobile optimization</li>
       <li>Experienced in adapting to a changing workflow while meeting demands</li>
@@ -38,6 +38,16 @@
 
     <h4>EXPERIENCE</h4>
     <ul>
+      <li>
+        <p>
+          <span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - Web Consultant
+          <br/>July 2020 - Present</p>
+      </li>
+      <li>
+        <p>
+          <span class="font-weight-bold">Best Buy</span> - Jackson, MI - Geek Squad Autotech
+          <br/>October 2018 - Present</p>
+      </li>
       <li>
         <p>
           <span class="font-weight-bold">Sans Halo LLC</span> - Jackson, MI - Owner/Developer
@@ -54,8 +64,13 @@
     <ul>
       <li>
         <p>
+          <span class="font-weight-bold">Western Michigan University</span> - Kalamazoo, MI
+          <br/>September 2020 - Present</p>
+      </li>
+      <li>
+        <p>
           <span class="font-weight-bold">Jackson College</span> - Jackson, MI
-          <br/>September 2017 - Present</p>
+          <br/>September 2017 - July 2020</p>
       </li>
     </ul>
     </div>
@@ -63,7 +78,7 @@
   </div>
 
     <div class="container-fluid padded footer text-center col-md-12">
-        <p>Copyright &#169; 2019 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+        <p>Copyright &#169; 2020 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
     </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
