--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
       <li>Comfortable with C++, C#, JS, Java, Lua, Python, and PHP, as well as modern web frameworks such as Laravel, Django, and Angular</li>
       <li>Competent with Windows, macOS, and Linux</li>
       <li>Proficient with modern web design, including responsive design principles and mobile optimization</li>
-      <li>Experienced in adapting to a changing workflow while meeting demands</li>
+      <li>Experienced in adapting to a changing workflow while meeting client demands</li>
     </ul>
 
     <h4>EXPERIENCE</h4>
